force-app/main/default/objects/HRCSVC_Reference__c/HRCSVC_Reference__c.object-meta.xml
<CustomObject>
    <label>Reference</label>
    <nameField>
        <label>Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>