force-app/main/default/objects/HRCSVC_Reference__c/fields/HRCSVC_Case__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>References</relationshipLabel>
    <relationshipName>References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>