force-app/main/default/objects/HRCSVC_Reference__c/fields/HRCSVC_Trimmed_True_URL__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Trimmed_True_URL__c</fullName>
    <formula>MID(
   HRCSVC_URL__c,
   IF(
      CONTAINS(HRCSVC_URL__c, &quot;www.&quot;),
      FIND(&quot;www.&quot;, HRCSVC_URL__c) + 4,
      IF(
         CONTAINS(HRCSVC_URL__c, &quot;://&quot;),
         FIND(&quot;://&quot;, HRCSVC_URL__c) + 3,
         0
      )
   ),
   LEN(HRCSVC_URL__c) -
   IF(
      CONTAINS(HRCSVC_URL__c, &quot;www.&quot;),
      FIND(&quot;www.&quot;, HRCSVC_URL__c) + 3,
      IF(
         CONTAINS(HRCSVC_URL__c, &quot;://&quot;),
         FIND(&quot;://&quot;, HRCSVC_URL__c) + 2,
         0
      )
   ) - IF(RIGHT(HRCSVC_URL__c, 1) = &quot;/&quot;, 1, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trimmed URL</label>
    <type>Text</type>
</CustomField>