force-app/main/default/objects/HRCSVC_Reference__c/fields/HRCSVC_URL__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_URL__c</fullName>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>