force-app/main/default/objects/HRCSVC_Reference__c/validationRules/Cannot_changes_after_case_closure.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_changes_after_case_closure</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Case__r.Status, &quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>You cannot change a reference after the parent case is closed. You must re-open the case or contact your administrator.</errorMessage>
</ValidationRule>